[*]Refactored the entire mod into two separate mods. The Better Terrain Addon now acts as a library for world generation, while the biomes themselves previously present in BTA have been split into Better Biomes. Note that this is still backwards compatible with old worlds, but will require both mods to be installed.
[*]Moved vanilla biome variants into BTA, and added a swamp variant.
[*]Changed climates to default to off if there are not enough biomes installed (note that climates may still be enabled if desired).
[*]Increased the maximum number of biome ids to 4096.
[*]Changed the format of the world configuration info to use json. Old worlds will still be processed correctly.
[*]Changed the world type when creating a new world to default to Better Terrain.
[/list]

Version 2.0.8
[list]
[*]Fixed an issue where eyes of ender could not locate strongholds.
[*]Fixed an issue where soul sand piles could not locate nether fortresses.
[*]Fixed an issue where nether fortress mobs would not spawn.
[/list]

Version 2.0.7
[list]
[*]Updated to BTW CE 1.3.8
[*]Changed snow height in cold climates to vary by a few blocks instead of being at a fixed level. This should make the transition look more natural.
[*]Fixed an issue where scattered features such as temples and witch huts were not generating.
[*]Fixed an issue where tall grass and flowers at high altitude in cold climates would not spawn with snow surrounding them.
[*]Fixed an issue where grassy clay ore rendered incorrectly.
[*]Fixed an issue where clay ore variants could not be silk touched.
[*]Refactored deco integration to use newer hooks added by CE.
[*]Removed a few base class edits.
[/list]

Version 2.0.6
[list]
[*]Updated to BTW CE 1.3.6
[*]Fixed an issue where BTA worlds still spawned legacy sugar cane.
[*]Fixed an issue where some sub-biomes could not spawn villages.
[*]Fixed an issue where villages would not spawn their desert variant.
[/list]

Version 2.0.5
[list]
[*]Updated to BTW CE 1.3.0