@@ -17,6 +17,7 @@ Version 3.0.0
 [*]Updated to CE 1.4.1
 [*]Refactored the entire mod into two separate mods. The Better Terrain Addon now acts as a library for world generation, while the biomes themselves previously present in BTA have been split into Better Biomes. Note that this is still backwards compatible with old worlds, but will require both mods to be installed.
 [*]Moved vanilla biome variants into BTA, and added a swamp variant.
+[*]Added the ability for addons to decorate BTA Biomes. Note that BTA biomes may deny this in case they wish to use a custom decorator for that addon's features.
 [*]Changed climates to default to off if there are not enough biomes installed (note that climates may still be enabled if desired).
 [*]Increased the maximum number of biome ids to 4096.
 [*]Changed the format of the world configuration info to use json. Old worlds will still be processed correctly.
